--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -39,40 +39,26 @@ set ( MODULE_NAME common )
 ## Specifiy all internal and external dependencies
 
 set ( INTERNAL_DEPS )
-set ( SCAI_COMMON_EXTERNAL_DEPS OpenMP CUDA MIC dl Thread ) 
+set ( EXTERNAL_DEPS OpenMP CUDA MIC dl Thread ) 
 
 ## Define all library names with the (global) prefix SCAI_LIBRARY_PREFIX
 
 set ( PROJECT_NAME "${SCAI_LIBRARY_PREFIX}${MODULE_NAME}" )
-string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}")
 
 ## important Variables for project
+
+## ToDo: get rid of this include file, most variables are already obsolete
+## Note: must be called by each module project individually
 
 include ( SetProjectVariables)
 include ( Dependencies/minimalSupportedVersions )
 
-## needed functions
-include ( Functions/scaiFunctions )
-include ( Functions/scaiProject )
-include ( Functions/relativeInstall )
 
-include ( SetBuildFlags )
-include ( VersionCheck/Compiler )
-include ( Compiler/SetCPPFlags )
+### find all external packages via the provided wrappers of CMake modules
 
-## C++11 or Boost
-include ( Compiler/CheckC++11 )
-if    ( NOT CXX_SUPPORTS_C11 )
-    include( Package/Boost )
-endif ( NOT CXX_SUPPORTS_C11 )
-
-## Use Boost if BUILD_TEST is enabled
-if ( BUILD_TEST )
-    include( Package/BoostTest )
-endif ( BUILD_TEST )
-
-### include all search packages
-addInternalAndExternalPackages()
+foreach ( module ${EXTERNAL_DEPS} )
+    include( Package/${module} )
+endforeach ()
 
 ### finalize build flags
 include ( ConcludeFlags )
@@ -86,9 +72,17 @@ if    ( WIN32 )
 endif ( WIN32 )
 
 ### Project System-Include
-set( CONFIGURE_INCLUDE_DIR ${CMAKE_BINARY_DIR}/include )
+
+set ( CONFIGURE_INCLUDE_DIR ${CMAKE_BINARY_DIR}/include )
 include_directories ( ../.. ${CONFIGURE_INCLUDE_DIR} )
-addInternalAndExternalIncludes()
+
+### add includes for external packages
+
+foreach ( module ${EXTERNAL_DEPS} )
+    string ( TOUPPER ${module} upper_module )
+    include_directories( ${SCAI_${upper_module}_INCLUDE_DIR} )
+endforeach ()
+
 if    ( NOT CXX_SUPPORTS_C11 )
     include_directories ( ${BOOST_INCLUDE_DIR} )
 endif ( NOT CXX_SUPPORTS_C11 )
@@ -266,17 +260,12 @@ if ( WIN32 )
     link_directories ( ${Boost_LIBRARY_DIRS} )
 endif ( WIN32 )
 
-### add library ###
-add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
-set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${SCAI_VERSION} )
+## Define library via macro using MODULE_NAME, INTERNAL_DEPS, EXTERNAL_DEPS
+## and global variables SCAI_LIBRARY_PREFIX, SCAI_VERSION, ....
 
-## add link libraries
-addExternalLinkLibraries()
+scai_library ()
 
 ### install ###
-
-## install lib
-install ( TARGETS ${PROJECT_NAME} DESTINATION lib )
 
 ## install headers
 relative_install ( FILES ${CXX_HEADERS} DESTINATION "include/scai/${MODULE_NAME}" )
