--- a/scai/lama/test/matrix/CMakeLists.txt
+++ b/scai/lama/test/matrix/CMakeLists.txt
@@ -77,5 +77,5 @@ add_executable ( lamaMatrixTest ${CXX_SOURCES} )
 if ( WIN32 )
     target_link_libraries ( lamaMatrixTest ${PROJECT_NAME} )
 else ( WIN32 )
-    target_link_libraries ( lamaMatrixTest ${PROJECT_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
+    target_link_libraries ( lamaMatrixTest ${PROJECT_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
 endif ( WIN32 )
