--- a/scai/blaskernel/CMakeLists.txt
+++ b/scai/blaskernel/CMakeLists.txt
@@ -45,10 +45,6 @@ set ( EXTERNAL_DEPS OpenMP CUDA MIC SCAI_BLAS )
 
 set ( PROJECT_NAME "${SCAI_LIBRARY_PREFIX}${MODULE_NAME}" )
 
-## important Variables for project
-include ( SetProjectVariables)
-include ( Dependencies/minimalSupportedVersions )
-
 ### find all external packages via the provided wrappers of CMake modules
 
 foreach ( module ${EXTERNAL_DEPS} )
@@ -146,7 +142,7 @@ endif ( USE_MIC )
 relative_install ( FILES ${CXX_HEADERS} DESTINATION "include/scai/${MODULE_NAME}" )
 
 ## install library.hpp
-install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
+install ( FILES ../${MODULE_NAME}.hpp DESTINATION include/scai )
 
 ## add custom target doc_${MODULE_NAME} to generate Sphinx user documentation 
 include ( CustomCommands/SphinxDoc )
