--- a/scai/sparsekernel/CMakeLists.txt
+++ b/scai/sparsekernel/CMakeLists.txt
@@ -43,12 +43,6 @@ set ( EXTERNAL_DEPS OpenMP CUDA MIC SCAI_BLAS )
 
 set ( PROJECT_NAME "${SCAI_LIBRARY_PREFIX}${MODULE_NAME}" )
 
-### includes ###
-
-## important Variables for project
-include ( SetProjectVariables)
-include ( Dependencies/minimalSupportedVersions )
-
 ### find all external packages via the provided wrappers of CMake modules
 
 foreach ( module ${EXTERNAL_DEPS} )
@@ -151,7 +145,7 @@ endif ( USE_MIC )
 relative_install( FILES ${CXX_HEADERS} DESTINATION include/scai/${MODULE_NAME} )
 
 ## install library.hpp
-install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
+install ( FILES ../${MODULE_NAME}.hpp DESTINATION include/scai )
 
 ## add custom target doc_${MODULE_NAME} to generate Sphinx user documentation 
 
